test/ok/const_resolution.c4
const fn outer(param: int): int {
	const FOO: int = 10;
	const fn inner(): int {
		return FOO;
	}
	return inner() + param;
}
