test/fail/closure.c4
fn foo(): int {
	let param: int = 10;
	fn bar(): int {
		return param;
	}
	return bar();
}
